#==============================================================
#
#  Name: RELEASE_NOTES
#
#  Rem:  This file contains the release notes for mksu as
#        pertains to the LCLS release format and procedures.
#
#
#  Auth: 28-Nov-2011, L. Piccoli         (LPICCOLI)
#  Rev:  dd-mmm-yyyy, Reviewer's Name    (USERNAME)
#==============================================================
#
#

mksu-R1-0-0: Initial realease - pretty empty!