@@ -21,8 +21,8 @@ TEMPLATE_TOP=$(EPICS_BASE)/templates/makeBaseApp/top
 # ========================================================================================
 # #If using macro substitutions, point MSI at the binary:
 #EXTENSIONS_MODULE_VERSION=extensions-R3-14-9
-#EXTENSIONS_MODULE_VERSION=extensions-R3-14-8-2
-EXTENSIONS_MODULE_VERSION=R3-14-10
+EXTENSIONS_MODULE_VERSION=extensions-R3-14-8-2
+#EXTENSIONS_MODULE_VERSION=R3-14-10
 MSI=$(EPICS_SITE_TOP)/extensions/$(EXTENSIONS_MODULE_VERSION)/bin/$(EPICS_HOST_ARCH)/msi
 # # ========================================================================================
 EPICS_MODULES=$(EPICS_SITE_TOP)/modules
